--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@twilio/voice-sdk": "^2.11.2",
     "twilio": "^5.3.5",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/node": "^20.10.6",
     "@types/express": "^4.17.21",
+    "@types/express-ws": "^3.0.4",
     "@types/cors": "^2.8.17",
     "@types/pg": "^8.10.9",
     "@types/ws": "^8.5.10",
