fixed ws session

--- a/.env.example
+++ b/.env.example
@@ -32,4 +32,4 @@ CLOVER_API_KEY=
 
 # Application URLs
 APP_URL=http://localhost:3000
-WEBHOOK_BASE_URL=https://your-domain.com
+WEBHOOK_BASE_URL=your-domain.com
