--- a/package.json
+++ b/package.json
@@ -11,36 +11,45 @@
     "db:seed": "tsx src/database/seed.ts",
     "test": "jest"
   },
-  "keywords": ["ai", "phone", "restaurant", "voice", "automation"],
+  "keywords": [
+    "ai",
+    "phone",
+    "restaurant",
+    "voice",
+    "automation"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/opus": "^0.10.0",
     "@twilio/voice-sdk": "^2.11.2",
-    "twilio": "^5.3.5",
-    "express": "^4.18.2",
-    "express-ws": "^5.0.2",
+    "alawmulaw": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
+    "express": "^4.18.2",
+    "express-ws": "^5.0.2",
     "ioredis": "^5.3.2",
-    "stripe": "^14.10.0",
     "openai": "^4.72.0",
-    "zod": "^3.22.4",
-    "ws": "^8.16.0",
-    "uuid": "^9.0.1"
+    "pcm-convert": "^1.6.5",
+    "pg": "^8.11.3",
+    "stripe": "^14.10.0",
+    "twilio": "^5.3.5",
+    "uuid": "^9.0.1",
+    "ws": "^8.19.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-ws": "^3.0.4",
-    "@types/cors": "^2.8.17",
-    "@types/pg": "^8.10.9",
-    "@types/ws": "^8.5.10",
-    "@types/uuid": "^9.0.7",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.6",
+    "@types/pg": "^8.10.9",
+    "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.10",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
