--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@discordjs/opus": "^0.10.0",
     "@twilio/voice-sdk": "^2.11.2",
     "alawmulaw": "^6.0.0",
+    "audio-buffer-utils": "^5.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
