can call toasts api for menu

--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,19 @@ STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 
 # POS Integration (Optional - add as needed)
 SQUARE_ACCESS_TOKEN=
-TOAST_API_KEY=
 CLOVER_API_KEY=
+
+# Itsacheckmate Configuration (for Toast POS integration)
+# Sign up at https://www.itsacheckmate.com/
+# Provides API access to Toast POS and handles payment processing through Toast's payment processor
+ITSACHECKMATE_API_KEY=
+ITSACHECKMATE_RESTAURANT_GUID=
+
+# Toast API Configuration (for direct Toast POS access)
+# Optional: If you have Toast Standard API key, add it here for real-time availability checking
+# The system will automatically check Toast's API to see if your restaurant is open
+TOAST_API_KEY=
+TOAST_RESTAURANT_GUID=
 
 # Application URLs
 APP_URL=http://localhost:3000
