added whitelist for menus

--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,9 @@ ITSACHECKMATE_RESTAURANT_GUID=
 TOAST_CLIENT_ID=
 TOAST_CLIENT_SECRET=
 TOAST_RESTAURANT_GUID=
+# Comma-separated list of Toast menu names to include for phone AI (filters out third-party menus like Uber Eats)
+# Leave empty to include all menus. Example: TOAST_MENU_WHITELIST=Main Menu,Catering Menu
+TOAST_MENU_WHITELIST=
 
 # Application URLs
 APP_URL=http://localhost:3000
