--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
+    "fuse.js": "^7.1.0",
     "ioredis": "^5.3.2",
     "openai": "^4.72.0",
     "pcm-convert": "^1.6.5",
